Fix: Incorrect path in dev-ct.yml
Changed path for the role "wait-for-connection" to its new location at
"common/wait-for-connection".

--- a/dev-ct.yml
+++ b/dev-ct.yml
@@ -15,5 +15,5 @@
   remote_user: root
   gather_facts: no
   roles:
-    - wait-for-connection
+    - common/wait-for-connection
     - common/upgrade-system
