Change: Move variables into the playbook
Moved the variables "targetNode" and "storagePool" into the playbook, so
they can be more effectively defined when working with multiple nodes.

--- a/dev-ct.yml
+++ b/dev-ct.yml
@@ -9,6 +9,8 @@
     - role: terraform-deploy
       targets: [ module.dev-containers ]
       hostNums: [ 30 ]
+      targetNode: proxmox
+      storagePool: local-zfs
 
 - name: Provision Debian Dev Container
   hosts: dev_servers
