--- a/roles/terraform-deploy/tasks/main.yml
+++ b/roles/terraform-deploy/tasks/main.yml
@@ -10,8 +10,8 @@
       dns_secretType: "{{ dns.secretType }}"
       guest_ctImage: "{{ guest.ctImage }}"
       guest_hostNums: "{{ hostNums }}"
-      guest_targetNode: "{{ guest.targetNode }}"
-      guest_storagePool: "{{ guest.storagePool }}"
+      guest_targetNode: "{{ targetNode }}"
+      guest_storagePool: "{{ storagePool }}"
       guest_pubKeyFile: "{{ guest.pubKeyFile }}"
       guest_vmTemplate: "{{ guest.vmTemplate }}"
       net_domain: "{{ net.domain }}"
