--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
+#######################################
+###   TESTING / DEVELOPMENT FILES   ###
+#######################################
+# Test playbook
+test-playbook.yml
+
+# Python SSL testing file
+ssl-test.py
+
+
 ############################################
 ###   ANSIBLE SECRET FILES / VARIABLES   ###
 ############################################
 # Root variables directory
 /vars/*
-
-# Proxmox dynamic inventory file
-*.proxmox.yml
-
-# Test playbook
-test-playbook.yml
 
 # Not fully implemented / sanitized yet
 **/media-server-v2/*
