--- a/vars.template/minecraft.yml
+++ b/vars.template/minecraft.yml
@@ -7,6 +7,11 @@ mcserver:
   ops: AdminsUsername
   dbpass: 'p4$Sw0Rd'
 
+pki:
+  path: /var/local
+  CN: Minecraft Server
+  OU: Game Servers
+
 mariadb_root_password: 'p4$Sw0Rd'
 
 timezone: UTC
