Conf: Merge PKI vars into global vars

--- a/vars.template/global.yml
+++ b/vars.template/global.yml
@@ -13,6 +13,13 @@ guest:
   pubKeyFile: "~/.ssh/id_ed25519.pub"
   vmTemplate: template-rocky85
 
+pki_common:
+  subject:
+    C: US
+    ST: California
+    L: San Francisco
+    O: My Homelab
+
 proxmox:
   hostNums: [ 100 ]
 
