Impr: Add a Debian dev server role
- Installs vim
- Sets nicer aliases for `ls`
- Fix incorrect `hosts` parameter in dev-ct.yml playbook

--- a/dev-ct.yml
+++ b/dev-ct.yml
@@ -13,9 +13,10 @@
       storagePool: local-zfs
 
 - name: Provision Debian Dev Container
-  hosts: dev_servers
+  hosts: development
   remote_user: root
   gather_facts: no
   roles:
     - common/wait-for-connection
     - common/upgrade-system
+    - debian/development
