Impr: Move cfssl_certificate library to global dir
Moved the `cfssl_certificate` libary to a global `library` folder in the
repository root, where it is globally accessible.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "roles/pki/cfssl-gencert/library"]
-	path = roles/pki/cfssl-gencert/library
+	path = library
 	url = https://github.com/ralgar/ansible-cfssl-certificate
