PKI: Add ability to serve and import root CA
- PKI server now serves the Root CA certificate at
  http://pki:8000/root-ca.pem
- Added role to import Root CA to system trust store

--- a/roles/pki/cfssl-server/handlers/main.yml
+++ b/roles/pki/cfssl-server/handlers/main.yml
@@ -10,3 +10,9 @@
     name: ocsp.service
     daemon_reload: yes
     state: restarted
+
+- name: Restart root-ca-serve.service
+  systemd:
+    name: root-ca-serve.service
+    daemon_reload: yes
+    state: restarted
