--- a/roles/pki/import-root-ca/tasks/Debian.yml
+++ b/roles/pki/import-root-ca/tasks/Debian.yml
@@ -3,6 +3,8 @@
   get_url:
     url: http://pki:8000/root-ca.pem
     dest: /usr/local/share/ca-certificates/homelab-root-ca.crt
+  register: root_ca_stat
 
 - name: Update CA trust store
   command: update-ca-certificates
+  when: root_ca_stat.changed
