--- a/roles/terraform-deploy/tasks/main.yml
+++ b/roles/terraform-deploy/tasks/main.yml
@@ -33,4 +33,4 @@
     host: "{{ net.prefix | ansible.netcommon.nthhost(item) }}"
     groups: new_nameservers
   loop: "{{ dns.hostNums }}"
-  when: '"module.nameservers" in targets'
+  when: '"module.nameservers" in targets and state != "absent"'
