Impr: Simplify configuration
Variables for the Terraform module are now set automatically from the
dynamic inventory configuration. This was done by including the dynamic
inventory configuration as a variable when using the `terraform-deploy`
role.

--- a/10-nameservers.yml
+++ b/10-nameservers.yml
@@ -3,6 +3,7 @@
 - name: Deploy BIND9 Name Servers
   hosts: localhost
   vars_files:
+    - vars/hosts.proxmox.yml
     - vars/global.yml
   roles:
     - role: terraform-deploy
