--- a/roles/pki/import-root-ca/tasks/RedHat.yml
+++ b/roles/pki/import-root-ca/tasks/RedHat.yml
@@ -2,7 +2,7 @@
 - name: Get Root CA certificate (Red Hat)
   get_url:
     url: http://pki:8000/root-ca.pem
-    dest: /etc/pki/ca-trust/source/homelab-root-ca.crt
+    dest: /etc/pki/ca-trust/source/anchors/homelab-root-ca.pem
 
 - name: Update CA trust store
   command: update-ca-trust
