Fix: Idempotency for import-root-ca role
The certificate imports were not idempotent for Arch Linux or Red Hat
Linux distributions. Added conditionals for idempotency and changed
variable name for existing Debian conditional to match.

--- a/roles/pki/import-root-ca/tasks/Debian.yml
+++ b/roles/pki/import-root-ca/tasks/Debian.yml
@@ -3,8 +3,8 @@
   get_url:
     url: http://pki:8000/root-ca.pem
     dest: /usr/local/share/ca-certificates/homelab-root-ca.crt
-  register: root_ca_stat
+  register: certificate_status
 
 - name: Update CA trust store
   command: update-ca-certificates
-  when: root_ca_stat.changed
+  when: certificate_status.changed
