--- a/20-infrastructure.yml
+++ b/20-infrastructure.yml
@@ -1,6 +1,6 @@
 # Deploys and provisions infrastructure services
 ---
-- name: Deploy PostgreSQL Database
+- name: Deploy PostgreSQL Database with Terraform
   hosts: localhost
   vars_files:
     - vars/hosts.proxmox.yml
@@ -12,7 +12,7 @@
       targetNode: pve1
       storagePool: local-zfs
 
-- name: Provision PostgreSQL Database
+- name: Provision PostgreSQL Database with Ansible
   hosts: postgres
   remote_user: root
   gather_facts: no
@@ -22,7 +22,7 @@
     - common/wait-for-connection
     - debian/postgresql
 
-- name: Deploy PKI Server
+- name: Deploy PKI Server with Terraform
   hosts: localhost
   vars_files:
     - vars/hosts.proxmox.yml
@@ -34,7 +34,7 @@
       targetNode: pve1
       storagePool: local-zfs
 
-- name: Provision PKI Server
+- name: Provision PKI Server with Ansible
   hosts: pki_servers
   remote_user: root
   gather_facts: no
@@ -43,3 +43,27 @@
   roles:
     - common/wait-for-connection
     - pki/cfssl-server
+
+- name: Deploy LDAP server with Terraform
+  hosts: localhost
+  vars_files:
+    - vars/hosts.proxmox.yml
+    - vars/global.yml
+  roles:
+    - role: terraform-deploy
+      targets: [ module.ldap-server ]
+      hostNums: [ 25 ]
+      targetNode: pve1
+      storagePool: local-zfs
+
+- name: Provision LDAP server with Ansible
+  hosts: ldap_servers
+  remote_user: root
+  gather_facts: no
+  vars_files:
+    - vars/hosts.proxmox.yml
+    - vars/global.yml
+  roles:
+    - common/wait-for-connection
+    - pki/import-root-ca
+    - debian/389ds
