--- a/roles/debian/389ds/tasks/configure-tls.yml
+++ b/roles/debian/389ds/tasks/configure-tls.yml
@@ -11,7 +11,7 @@
     hosts:
       - "{{ ansible_hostname }}"
       - "{{ ansible_hostname }}.{{ ansible_domain }}"
-      - "{{ ansible_default_ipv4.address }}"
+      - "{{ ansible_default_ipv4.address | default(ansible_all_ipv4_addresses[0]) }}"
     names:
       C: "{{ pki_common.subject.C }}"
       ST: "{{ pki_common.subject.ST }}"
