--- a/roles/debian/389ds/tasks/access-control.yml
+++ b/roles/debian/389ds/tasks/access-control.yml
@@ -1,5 +1,23 @@
 ---
-- name: Set ACL - User self read only
+- name: Set 'User Password Reset' ACL for 'people' OU
+  ldap_attrs:
+    bind_dn: cn=manager
+    bind_pw: "{{ dirsrv_root_pw }}"
+    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    validate_certs: no
+    dn: "ou=people,{{ dirsrv_domain }}"
+    attributes:
+      aci:
+        (targetattr="userPassword || nsAccountLock || userCertificate || nsSshPublicKey")
+        (targetfilter="(objectClass=nsAccount)")
+        (version 3.0;
+          acl "Enable user password reset";
+          allow (write, read, search)
+          (groupdn="ldap:///cn=user_passwd_reset,ou=permissions,{{ dirsrv_domain }}");
+        )
+    state: present
+
+- name: Set 'User Self Read Only' ACL for 'people' OU
   ldap_attrs:
     bind_dn: cn=manager
     bind_pw: "{{ dirsrv_root_pw }}"
@@ -9,11 +27,11 @@
     attributes:
       aci:
         (targetattr="objectClass || description || nsUniqueId || uid || displayName || loginShell || uidNumber || gidNumber || gecos || homeDirectory || cn || memberOf || mail || nsSshPublicKey || nsAccountLock || userCertificate")
-        (targetfilter="(objectClass=posixaccount)")
+        (targetfilter="(objectClass=nsAccount)")
         (version 3.0;
-          acl "Enable only user self read";
+          acl "Enable only user read";
           allow (read, search, compare)
-          (userdn="ldap:///self");
+          (groupdn="ldap:///cn=user_read,ou=permissions,{{ dirsrv_domain }}");
         )
-    state: exact
+    state: present
   notify: restart_dirsrv
