--- a/roles/debian/389ds/defaults/main.yml
+++ b/roles/debian/389ds/defaults/main.yml
@@ -8,3 +8,6 @@ default_user_uid: "default_user"
 default_user_displayname: "Default User"
 default_user_email: "user@domain.tld"
 default_user_password: "password"
+
+# Service Accounts
+gitlab_service_password: "password"
