--- a/roles/debian/389ds/tasks/users/admin.yml
+++ b/roles/debian/389ds/tasks/users/admin.yml
@@ -5,7 +5,7 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "uid=admin,ou=people,{{ dirsrv_domain }}"
+    dn: "cn=admin,ou=people,{{ dirsrv_domain }}"
     objectClass:
       - top
       - nsPerson
@@ -22,10 +22,8 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "uid=admin,ou=people,{{ dirsrv_domain }}"
+    dn: "cn=admin,ou=people,{{ dirsrv_domain }}"
     attributes:
-      uid: admin
       cn: admin
       displayName: Admin
-      employeeType: developer
     state: exact
