Fix: Messy stashed work from LDAP replication

--- a/roles/debian/389ds/tasks/main.yml
+++ b/roles/debian/389ds/tasks/main.yml
@@ -34,4 +34,7 @@
     - users/default-user.yml
     - services/gitlab.yml
     - groups/administrators.yml
+    - plugins/attribute-uniqueness.yml
+    - plugins/dna.yml
+    - plugins/enable-plugins.yml
     - configure-tls.yml
