--- a/roles/debian/389ds/tasks/users/admin.yml
+++ b/roles/debian/389ds/tasks/users/admin.yml
@@ -5,13 +5,15 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "cn=admin,ou=people,{{ dirsrv_domain }}"
+    dn: "uid=admin,ou=people,{{ dirsrv_domain }}"
     objectClass:
       - top
       - nsPerson
       - nsAccount
+      - nsOrgPerson
     attributes:
       cn: admin
+      uid: admin
       displayName: Admin
       userPassword: "{{ admin_user_password }}"
     state: present
@@ -22,8 +24,10 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "cn=admin,ou=people,{{ dirsrv_domain }}"
+    dn: "uid=admin,ou=people,{{ dirsrv_domain }}"
     attributes:
       cn: admin
+      uid: admin
       displayName: Admin
+      employeeType: developer
     state: exact
