--- a/roles/debian/389ds/tasks/users/default-user.yml
+++ b/roles/debian/389ds/tasks/users/default-user.yml
@@ -5,13 +5,15 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "cn={{ default_user_uid }},ou=people,{{ dirsrv_domain }}"
+    dn: "uid={{ default_user_uid }},ou=people,{{ dirsrv_domain }}"
     objectClass:
       - top
       - nsPerson
       - nsAccount
+      - nsOrgPerson
     attributes:
       cn: "{{ default_user_uid }}"
+      uid: "{{ default_user_uid }}"
       displayName: "{{ default_user_displayname }}"
       userPassword: "{{ default_user_password }}"
     state: present
@@ -22,9 +24,11 @@
     bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
-    dn: "cn={{ default_user_uid }},ou=people,{{ dirsrv_domain }}"
+    dn: "uid={{ default_user_uid }},ou=people,{{ dirsrv_domain }}"
     attributes:
       cn: "{{ default_user_uid }}"
+      uid: "{{ default_user_uid }}"
       displayName: "{{ default_user_displayname }}"
+      employeeType: developer
       mail: "{{ default_user_email }}"
     state: exact
