--- a/roles/debian/389ds/defaults/main.yml
+++ b/roles/debian/389ds/defaults/main.yml
@@ -3,11 +3,8 @@ dirsrv_domain: dc=homelab,dc=internal
 dirsrv_root_pw: "password"
 
 # Default User Configuration
-admin_user_password: "password"
+admin_user_passwd: "password"
 default_user_uid: "default_user"
 default_user_displayname: "Default User"
 default_user_email: "user@domain.tld"
-default_user_password: "password"
-
-# Service Accounts
-gitlab_service_password: "password"
+default_user_passwd: "password"
