--- a/roles/debian/389ds/tasks/authentication.yml
+++ b/roles/debian/389ds/tasks/authentication.yml
@@ -2,7 +2,7 @@
 - name: Disable anonymous bind
   ldap_attrs:
     bind_dn: cn=manager
-    bind_pw: password
+    bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
     dn: cn=config
