--- a/roles/debian/389ds/tasks/configure-tls.yml
+++ b/roles/debian/389ds/tasks/configure-tls.yml
@@ -54,7 +54,7 @@
 - name: Enable and Require TLS Connections
   ldap_attrs:
     bind_dn: cn=manager
-    bind_pw: password
+    bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
     dn: cn=config
