Impr: Various GitLab runner improvements
Improved GitLab runner functionality by allowing containers to run in
privileged mode, and also supplying an 8GB auxiliary disk.

--- a/roles/gitlab/runner/tasks/register-runner.yml
+++ b/roles/gitlab/runner/tasks/register-runner.yml
@@ -13,4 +13,6 @@
     --tag-list "{{ runner_tags | join(',') }}"
     --executor "{{ runner_executor }}"
     --docker-image "{{ runner_default_docker_image }}"
+    --docker-privileged "true"
+    --docker-devices "/dev/sdb"
   when: configured_runners.stderr.find(runner_description) == -1
