Various improvements for GitLab and runner
- Increase root storage for both GitLab and runner to 40GB
- Increase runner auxiliary disk size to 10GB
- Configure additional docker volumes and devices for runner
- Install mainline kernel for runner (RHEL kernel lacks btrfs support)
- Add 'runner' tag for runner plays

--- a/21-gitlab.yml
+++ b/21-gitlab.yml
@@ -26,6 +26,7 @@
     - gitlab/server
 
 - name: Deploy the GitLab Runner VM with Terraform
+  tags: runner
   hosts: localhost
   vars_files:
     - vars/hosts.proxmox.yml
@@ -38,6 +39,7 @@
       storagePool: local-zfs
 
 - name: Provision the GitLab Runner VM with Ansible
+  tags: runner
   hosts: gitlab-runner
   become: true
   gather_facts: no
