Impr: Move Terraform role into Proxmox role group
The Terraform role is written specifically for Proxmox, so it makes
sense to have it as a subset of the Proxmox role group.

--- a/10-nameservers.yml
+++ b/10-nameservers.yml
@@ -6,7 +6,7 @@
     - vars/hosts.proxmox.yml
     - vars/global.yml
   roles:
-    - role: terraform-deploy
+    - role: proxmox/terraform-deploy
       targets: [ module.nameservers ]
       hostNums: "{{ dns.hostNums }}"
       targetNode: pve1
