--- a/roles/proxmox/template-vm/defaults/main.yml
+++ b/roles/proxmox/template-vm/defaults/main.yml
@@ -5,6 +5,6 @@ templates:
     image: "http://download.rockylinux.org/pub/rocky/8.5/images/Rocky-8-GenericCloud-8.5-20211114.2.x86_64.qcow2"
     checksum: "sha256:c23f58f26f73fb9ae92bfb4cf881993c23fdce1bbcfd2881a5831f90373ce0c8"
   # Arch Linux
-  - template_name: template-arch20220412
+  - template_name: template-arch
     image: "https://gitlab.archlinux.org/archlinux/arch-boxes/-/jobs/52734/artifacts/raw/output/Arch-Linux-x86_64-cloudimg-20220412.52734.qcow2"
     checksum: "sha256:ef793478a5456bb37cf26fd2d052acf9d5c51f76907f70237baad041399d0b44"
