--- a/roles/proxmox/template-vm/defaults/main.yml
+++ b/roles/proxmox/template-vm/defaults/main.yml
@@ -10,5 +10,5 @@ templates:
     checksum: "sha256:fe84502779b3477284a8d4c86731f642ca10dd3984d2b5eccdf82630a9ca2de6"
   # Rocky Linux 8
   - template_name: template-rocky8
-    image: "http://download.rockylinux.org/pub/rocky/8.5/images/Rocky-8-GenericCloud-8.5-20211114.2.x86_64.qcow2"
-    checksum: "sha256:c23f58f26f73fb9ae92bfb4cf881993c23fdce1bbcfd2881a5831f90373ce0c8"
+    image: "https://download.rockylinux.org/pub/rocky/8/images/Rocky-8-GenericCloud.latest.x86_64.qcow2"
+    checksum: "sha256:https://download.rockylinux.org/pub/rocky/8/images/CHECKSUM"
