--- a/vars.template/hosts.proxmox.yml
+++ b/vars.template/hosts.proxmox.yml
@@ -17,7 +17,7 @@ groups:
   debian: "'debian' in (proxmox_tags_parsed|list)"
   development: "'dev' in (proxmox_tags_parsed|list)"
   k3s_cluster: "'k3s-cluster' in (proxmox_tags_parsed|list)"
-  k3s_master: "'k3s-master' in (proxmox_tags_parsed|list)"
+  k3s_masters: "'k3s-master' in (proxmox_tags_parsed|list)"
   k3s_workers: "'k3s-worker' in (proxmox_tags_parsed|list)"
   minecraft: "'minecraft' in (proxmox_tags_parsed|list)"
   nameservers: "'nameservers' in (proxmox_tags_parsed|list)"
