--- a/roles/gitlab/server/handlers/main.yml
+++ b/roles/gitlab/server/handlers/main.yml
@@ -12,3 +12,10 @@
 - name: Disable sign-up and standard auth
   include_tasks: ldap.yml
   listen: ldap_handler
+
+- name: Create fullchain certificate
+  shell: |
+    cat /etc/gitlab/ssl/{{ ansible_hostname }}.{{ ansible_domain }}
+    /etc/gitlab/trusted_certs/ca.crt
+    > /etc/gitlab/ssl/gitlab-fullchain.crt
+  listen: create_fullchain_certificate
