--- a/roles/gitlab/server/tasks/ssl.yml
+++ b/roles/gitlab/server/tasks/ssl.yml
@@ -16,6 +16,7 @@
   get_url:
     url: http://pki:8000/root-ca.pem
     dest: /etc/gitlab/trusted-certs/ca.crt
+  notify: create_fullchain_certificate
 
 - name: Install python-cryptography
   apt:
@@ -43,4 +44,6 @@
       L: "{{ pki_common.subject.L }}"
       O: "{{ pki_common.subject.O }}"
       OU: GitLab
-  notify: restart_gitlab
+  notify:
+    - restart_gitlab
+    - create_fullchain_certificate
