Prep: Add open-iscsi to K3s nodes
Longhorn distributed block storage requires open-iscsi.

--- a/roles/kubernetes/k3s-cluster/tasks/main.yml
+++ b/roles/kubernetes/k3s-cluster/tasks/main.yml
@@ -6,6 +6,7 @@
     - packages.yml
     - token.yml
     - services.yml
+    - open-iscsi.yml
 
 - name: Wait until worker is registered with master
   command: k3s kubectl get nodes -o name
