--- a/k3s.yml
+++ b/k3s.yml
@@ -2,6 +2,7 @@
 ---
 - name: Deploy K3s Cluster
   hosts: localhost
+  gather_facts: false
   vars_files:
     - vars/hosts.proxmox.yml
     - vars/global.yml
